# delivery-test-task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config_example.json  docker-compose.yml  logging_config.json  pyproject.toml
alembic/: env.py
alembic/cls/: parcel_types.json  transport_companies.json
alembic/versions/: 95692b93cd00_initial_migration.py  asuu22ge211l_insert_dicts.py  cdee23bc868e_foreign_key_company.py~  e6c347109f79_user_id.py
delivery_test_task/: __init__.py
delivery_test_task/app/: __init__.py  exception_handlers.py  main.py  routes.py  swagger.py
delivery_test_task/models/: database.py  pydantic_models.py  sqlalchemy_models.py
delivery_test_task/tests/: test_test.py
delivery_test_task/worker/: celery_app.py  redis_app.py  tasks.py
runtime/: Dockerfile  startup.sh
