[tool.poetry]
name = "delivery-test-task"
version = "0.1.0"
description = ""
authors = ["LilChicha174 <roman74mamin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
redis = "^5.1.0"
pika = "^1.3.2"
celery = "^5.4.0"
uvicorn = "^0.31.0"
dynaconf = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
