[tool.poetry]
name = "delivery-test-task"
version = "0.1.0"
description = ""
authors = ["LilChicha174 <roman74mamin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
redis = {extras = ["asyncio"], version = "^5.1.1"}
celery = "^5.4.0"
uvicorn = "^0.31.0"
dynaconf = "^3.2.6"
pydantic = "^2.9.2"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9"
aiohttp = "^3.10.9"
loguru = "^0.7.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
